remove deprecated URL use